tests/baselines/reference/typeOfThisInMemberFunctions.errors.txt
typeOfThisInMemberFunctions.ts(12,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
typeOfThisInMemberFunctions.ts(23,5): error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.


==== typeOfThisInMemberFunctions.ts (2 errors) ====
    class C {
        foo() {
            var r = this;
        }
    
        static bar() {
            var r2 = this;
        }
    }
    
    class D<T> {
        x: T;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        foo() {
            var r = this;
        }
    
        static bar() {
            var r2 = this;
        }
    }
    
    class E<T extends Date> {
        x: T;
        ~
!!! error TS2564: Property 'x' has no initializer and is not definitely assigned in the constructor.
        foo() {
            var r = this;
        }
    
        static bar() {
            var r2 = this;
        }
    }